# python-direct-connect

./: .gitignore  README.md  compose.yaml  pyproject.toml  setup.cfg
.github/workflows/: tests.yaml
direct_connect/: exceptions.py
direct_connect/nmdc/: __init__.py  client.py  connection.py  handlers.py  protocol.py
tests/: Dockerfile  conftest.py  test_nmdc.py
tests/services/: Dockerfile.nmdc  compose.yaml
