[tool.poetry]
name = "direct-connect"
version = "0.1.2"
description = ""
authors = ["macro1 <macromicah@gmail.com>"]
readme = "README.md"
packages = [{include = "direct_connect"}]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
black = "*"
coverage = { version = "*", extras = ["toml"] }
flake8 = "*"
isort = "*"
mypy = "*"
pytest = "*"
pytest-asyncio = "*"
tenacity = "*"
testcontainers = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["direct_connect"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
]

[tool.isort]
force_single_line = true
profile = "black"

[tool.mypy]
explicit_package_bases = true
files = ["."]
strict = true

[[tool.mypy.overrides]]
module = [
    'testcontainers.*',
]
ignore_missing_imports = true
