[project]
name = "direct-connect"
version = "0.1.2"
description = ""
authors = [{name = "macro1", email = "macromicah@gmail.com"}]
readme = "README.md"
license = {text = "ISC"}
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "coverage[toml]",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "ruff",
    "tenacity",
    "testcontainers>=4.0.0,<5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["direct_connect"]

[tool.coverage.run]
branch = true
source = ["direct_connect"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
]

[tool.mypy]
explicit_package_bases = true
files = ["."]
strict = true

[[tool.mypy.overrides]]
module = [
    'testcontainers.*',
]
ignore_missing_imports = true

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "I", # isort
    "C90", # mccabe
    "N", # pep8-naming
    "E", # pycodestyle error
    "W", # pycodestyle warning
    "F", # Pyflakes
    "PLW", # Pylint warning
]
ignore = [
    "E501", # Line too long
]

[tool.ruff.lint.isort]
force-single-line = true
